<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/resumo_compra_iv_header"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/resumo_compra_iv_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/resumo_compra_tv_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/resumo_compra_tv_parabens"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_compra_iv_header"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_iv_header"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_iv_header"
        app:layout_constraintTop_toTopOf="@+id/resumo_compra_iv_header"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumo_compra_tv_compra_realizada_sucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/resumo_compra_tv_compra_realizada_sucesso"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_tv_parabens"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_tv_parabens"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_tv_parabens" />

    <TextView
        android:id="@+id/resumo_compra_tv_confira_resumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/resumo_compra_tv_confira_resumo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_iv_header" />

    <ImageView
        android:id="@+id/resumo_compra_iv_pacote"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/resumo_compra_iv_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_tv_confira_resumo"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_tv_destino_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_iv_pacote"
        tools:text="São paulo" />

    <TextView
        android:id="@+id/resumo_compra_tv_data_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_tv_destino_pacote"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_tv_destino_pacote"
        tools:text="8/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/resumo_compra_tv_valor_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_tv_data_pacote"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_tv_data_pacote"
        tools:text="R$ 243,99" />
</android.support.constraint.ConstraintLayout>