<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/lista_pacotes_iv_banner_background"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorPrimary"
        android:contentDescription="@string/lista_pacotes_content_description_banner" />

    <TextView
        android:id="@+id/lista_pacotes_tv_banner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/lista_pacotes_tv_title_packages"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="@+id/lista_pacotes_iv_banner_background"
        app:layout_constraintEnd_toEndOf="@+id/lista_pacotes_iv_banner_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lista_pacotes_iv_banner_background"
        app:layout_constraintTop_toTopOf="@+id/lista_pacotes_iv_banner_background"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lista_pacotes_tv_banner_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lista_pacotes_tv_subtitle_country"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif"
        app:layout_constraintStart_toStartOf="@+id/lista_pacotes_tv_banner_title"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_tv_banner_title" />


    <ListView
        android:id="@+id/lista_pacotes_lv_pacotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_iv_banner_background"
        android:divider="@null"
        android:dividerHeight="0dp"
        tools:listitem="@layout/item_pacote" />

</android.support.constraint.ConstraintLayout>